make bin directory

--- a/memtoy/Makefile
+++ b/memtoy/Makefile
@@ -1,6 +1,14 @@
 CXX=arm-none-linux-gnueabi-g++
 CXX=g++
-OUTPUT=memtoy
+
+
+OUTPUT_DIR=$(PWD)/../bin
+OUTPUT=$(OUTPUT_DIR)/memtoy
+
+SRCS = main.cpp meminfo.cpp proc_status.cpp
 
 all:
-	$(CXX) main.cpp meminfo.cpp proc_status.cpp -o $(OUTPUT) 
+	$(CXX) $(SRCS)  -o $(OUTPUT) 
+
+clean:
+	rm -rf $(OUTPUT)
